# Odyssey_Project

./: .gitignore  .gitmodules  .ros_env_param.yaml  Dockerfile  README.md  docker-compose.yaml  setup_config_file.sh
Docs/: Difference_between_urdf_and_sdf.txt  Notes.md  some_cmd_lines.md
aliases/: .ros_aliases
ros2_ws/src/gr_bringup/: CMakeLists.txt
ros2_ws/src/gr_bringup/config/: livox_mid_360.json
ros2_ws/src/gr_bringup/config/rs_lidar/: RSHELIOS_16P_config.yaml
ros2_ws/src/gr_bringup/launch/: component_imu.launch.py  component_livox.launch.py  component_ouster.launch.py  component_realsense.launch.py  component_rs_lidar.launch.py
ros2_ws/src/gr_bringup/rviz/: rviz_ouster_realsense.rviz
ros2_ws/src/odom_frame_gen/src/: odom_frame_node.cpp
ros2_ws/src/slam_toolbox-humble/config/: mapper_params_online_async.yaml
src/gr_bringup/: package.xml
src/gr_bringup/config/: ouster.yaml  zed_f9p.yaml
src/gr_bringup/config/rs_lidar/: RSHELIOS_config.yaml
src/gr_bringup/launch/: component_gps.launch.py  main.launch.py
src/gr_bringup/rviz/: rviz_livox_realsense.rviz  rviz_ouster_zed2i.rviz  rviz_rslidar_realsense.rviz  rviz_rslidar_zed2i.rviz
src/odom_frame_gen/: CMakeLists.txt  package.xml
src/slam_toolbox-humble/config/: mapper_params_online_sync.yaml
